opam-version: "2.0"
name: "ptt"
synopsis: "Postes, Télégraphes et Téléphones, SMTP servers"
description: """\
PTT aggregate some SMTP servers like a relay or
a submission server. It can be use as an UNIX service or an MirageOS unikernel."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/mirage/ptt"
doc: "https://mirage.github.io/ptt/"
bug-reports: "https://github.com/mirage/ptt/issues"
depends: [
  "ocaml"             {>= "4.07.0"}
  "dune"
  "ptt"               {= version}
  "bos"
  "git-kv"
  "git-unix"          {>= "3.10.0"}
  "ca-certs"
  "cmdliner"          {>= "1.1.0"}
  "mirage-clock-unix" {>= "3.1.0"}
  "mirage-crypto-rng"
  "mirage-time-unix"  {>= "2.0.0"}
  "mimic"             {>= "0.0.1"}
  "alcotest-lwt"      {with-test}
  "base-threads"      {with-test}
  "alcotest"          {with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mirage/ptt.git"
