opam-version: "2.0"
name: "ptt"
synopsis: "Postes, Télégraphes et Téléphones, SMTP servers"
description: """\
PTT aggregate some SMTP servers like a relay or
a submission server. It can be use as an UNIX service or an MirageOS unikernel."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/mirage/ptt"
doc: "https://mirage.github.io/ptt/"
bug-reports: "https://github.com/mirage/ptt/issues"
depends: [
  "ocaml"             {>= "4.14.0"}
  "dune"
  "mrmime"
  "digestif"
  "colombe"           {>= "0.11.0"}
  "received"          {>= "0.5.1"}
  "sendmail"          {>= "0.11.0"}
  "sendmail-lwt"      {>= "0.11.0"}
  "sendmail-mirage"
  "mimic"
  "domain-name"
  "dns"
  "logs"
  "tls"               {>= "0.15.4"}
  "tls-mirage"        {>= "0.15.4"}
  "tcpip"             {>= "7.1.0"}
  "ke"                {>= "0.6"}
  "hxd"
  "bigstringaf"
  "mirage-crypto-rng" {>= "1.1.0"}
  "ocaml-syntax-shims"
  "dkim-mirage"       {>= "0.4.0"}
  "mirage-kv"         {>= "4.0.1"}
  "dns-client"        {>= "6.4.0"}
  "dns-mirage"
  "dns-tsig"
  "lwt"               {>= "5.4.0"}
  "mirage-clock"      {>= "3.1.0"}
  "mirage-flow"       {>= "2.0.1"}
  "mirage-random"     {>= "2.0.0"}
  "mirage-time"       {>= "2.0.1"}
  "uspf"
  "uspf-mirage"
  "data-encoding"     {>= "0.7"}
  "ptime"
  "spamtacus-mirage"
  "ipaddr"            {>= "5.0.1"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mirage/ptt.git"
pin-depends: [
  [ "spamtacus-bayesian.dev" "git+https://github.com/mirage/spamtacus.git#2d10c6f114e63621bb26999fefd7881f3e673bad" ]
  [ "spamtacus.dev"          "git+https://github.com/mirage/spamtacus.git#2d10c6f114e63621bb26999fefd7881f3e673bad" ]
  [ "spamtacus-mirage.dev"   "git+https://github.com/mirage/spamtacus.git#2d10c6f114e63621bb26999fefd7881f3e673bad" ]
  [ "uspf.dev"               "git+https://github.com/mirage/uspf.git#a4b90d1e99a607b2d2e8af62f32d5b211787b45d" ]
  [ "uspf-lwt.dev"           "git+https://github.com/mirage/uspf.git#a4b90d1e99a607b2d2e8af62f32d5b211787b45d" ]
  [ "uspf-mirage.dev"        "git+https://github.com/mirage/uspf.git#a4b90d1e99a607b2d2e8af62f32d5b211787b45d" ]
]
