opam-version: "2.0"
name: "ptt"
synopsis: "Postes, Télégraphes et Téléphones, SMTP servers"
description: """\
PTT aggregate some SMTP servers like a relay or
a submission server. It can be use as an UNIX service or an MirageOS unikernel."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/mirage/ptt"
doc: "https://mirage.github.io/ptt/"
bug-reports: "https://github.com/mirage/ptt/issues"
depends: [
  "ocaml"             {>= "4.14.0"}
  "dune"
  "mrmime"
  "digestif"
  "colombe"           {>= "0.11.0"}
  "received"          {>= "0.5.1"}
  "sendmail"          {>= "0.11.0"}
  "sendmail-mirage"
  "mimic"
  "domain-name"
  "dns"
  "logs"
  "tls"               {>= "0.15.4"}
  "tls-mirage"        {>= "0.15.4"}
  "tcpip"             {>= "7.1.0"}
  "ke"                {>= "0.6"}
  "hxd"
  "bigstringaf"
  "mirage-crypto-rng" {>= "1.1.0"}
  "ocaml-syntax-shims"
  "dkim-mirage"       {>= "0.4.0"}
  "mirage-kv"         {>= "4.0.1"}
  "dns-client"        {>= "6.4.0"}
  "dns-mirage"
  "dns-tsig"
  "lwt"               {>= "5.4.0"}
  "mirage-clock"      {>= "3.1.0"}
  "mirage-flow"       {>= "2.0.1"}
  "mirage-time"       {>= "2.0.1"}
  "uspf"
  "uspf-mirage"
  "dmarc"
  "arc"
  "data-encoding"     {>= "0.7"}
  "ptime"
  "spamtacus-mirage"
  "ipaddr"            {>= "5.0.1"}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mirage/ptt.git"
pin-depends: [
  [ "spamtacus-bayesian.dev" "git+https://github.com/mirage/spamtacus.git#2d10c6f114e63621bb26999fefd7881f3e673bad" ]
  [ "spamtacus.dev"          "git+https://github.com/mirage/spamtacus.git#2d10c6f114e63621bb26999fefd7881f3e673bad" ]
  [ "spamtacus-mirage.dev"   "git+https://github.com/mirage/spamtacus.git#2d10c6f114e63621bb26999fefd7881f3e673bad" ]
  [ "uspf.dev"               "git+https://github.com/mirage/uspf.git#a4b90d1e99a607b2d2e8af62f32d5b211787b45d" ]
  [ "uspf-lwt.dev"           "git+https://github.com/mirage/uspf.git#a4b90d1e99a607b2d2e8af62f32d5b211787b45d" ]
  [ "uspf-mirage.dev"        "git+https://github.com/mirage/uspf.git#a4b90d1e99a607b2d2e8af62f32d5b211787b45d" ]
  [ "dmarc.dev"              "git+https://github.com/dinosaure/ocaml-dmarc.git#7789e3c0835f97c3a4e43e3c58d81a23880f2773" ]
  [ "public-suffix.dev"      "git+https://github.com/dinosaure/ocaml-dmarc.git#7789e3c0835f97c3a4e43e3c58d81a23880f2773" ]
  [ "arc.dev"                "git+https://github.com/robur-coop/ocaml-arc.git#2ea6849a809b4abe4e7b37543e9459e1f7e9938a" ]
  [ "dkim.dev"               "git+https://github.com/mirage/ocaml-dkim.git#a497c0890ee077eecd691d0c87388d6c5404f66c" ]
  [ "dkim-mirage.dev"        "git+https://github.com/mirage/ocaml-dkim.git#a497c0890ee077eecd691d0c87388d6c5404f66c" ]
  [ "colombe.dev"            "git+https://github.com/mirage/colombe.git#fada7c8b2125e5b87e63f6e1d10a99443386aa9a" ]
  [ "sendmail.dev"           "git+https://github.com/mirage/colombe.git#fada7c8b2125e5b87e63f6e1d10a99443386aa9a" ]
  [ "sendmail-mirage.dev"    "git+https://github.com/mirage/colombe.git#fada7c8b2125e5b87e63f6e1d10a99443386aa9a" ]
]
