(library
 (name ptt)
 (public_name ptt)
 (modules ptt aggregate authentication common logic mechanism messaged mxs
   relay_map relay sigs sMTP sSMTP submission)
 (libraries digestif mrmime colombe.emile domain-name dns sendmail.starttls
   logs ipaddr)
 (preprocess future_syntax))

(library
 (name ptt_tuyau)
 (public_name ptt.tuyau)
 (modules unixiz ptt_tuyau lwt_backend)
 (libraries lwt tls-mirage bigstringaf mirage-time mirage-flow tcpip mimic
   ptt))

(library
 (name ptt_transmit)
 (public_name ptt.transmit)
 (modules ptt_transmit)
 (libraries ptt.tuyau mirage-clock received))

(library
 (name lipap)
 (public_name ptt.lipap)
 (modules lipap)
 (libraries tls ptt.transmit mirage-random tls-mirage))

(library
 (name mti_gf)
 (public_name ptt.mti-gf)
 (modules mti_gf)
 (libraries mirage-random ptt.transmit))

(library
 (name nec)
 (public_name ptt.nec)
 (modules nec)
 (libraries dkim-mirage mirage-random ptt.transmit))

(library
 (name hm)
 (public_name ptt.hm)
 (modules hm)
 (libraries dns-client.mirage uspf mirage-random ptt.transmit))

(library
 (name ptt_irmin)
 (public_name ptt.irmin)
 (modules ptt_irmin)
 (libraries mirage-kv ptt irmin))

(library
 (name spartacus)
 (public_name ptt.spartacus)
 (modules spartacus)
 (libraries spamtacus-mirage mirage-random ptt.transmit))
