(library
 (name ptt_common)
 (public_name ptt.common)
 (modules ptt_common mxs)
 (libraries lwt logs cstruct mirage-flow colombe tls mrmime dns))

(library
 (name ptt_sendmail)
 (public_name ptt.sendmail)
 (modules ptt_sendmail)
 (libraries hxd.core hxd.string emile colombe.emile mrmime sendmail-mirage
   ptt.common))

(library
 (name ptt_aggregate)
 (public_name ptt.aggregate)
 (modules ptt_aggregate)
 (libraries ptt.common ptt.sendmail))

(library
 (name ptt_flow)
 (public_name ptt.flow)
 (modules ptt_flow)
 (libraries hxd.core hxd.string logs ke colombe tcpip))

(library
 (name ptt_map)
 (public_name ptt.map)
 (modules ptt_map)
 (libraries ptt.common colombe.emile))

(library
 (name ptt)
 (public_name ptt)
 (modules ptt authentication logic mechanism msgd relay sMTP sSMTP submission)
 (libraries ptt.common ptt.flow ptt.aggregate digestif mrmime colombe.emile
   domain-name dns sendmail.starttls logs ipaddr)
 (preprocess future_syntax))

(library
 (name ptt_server)
 (public_name ptt.server)
 (modules ptt_server)
 (libraries lwt tls-mirage bigstringaf mirage-time mirage-flow tcpip mimic
   ptt))

(library
 (name ptt_fake_dns)
 (public_name ptt.fake-dns)
 (modules ptt_fake_dns)
 (libraries dns-client-mirage))

(library
 (name lipap)
 (public_name ptt.lipap)
 (modules lipap)
 (libraries mirage-time mirage-clock mirage-random ptt ptt.map ptt.server
   dns-client-mirage))

(library
 (name mti_gf)
 (public_name ptt.mti-gf)
 (modules mti_gf)
 (libraries mirage-time mirage-clock mirage-random ptt ptt.map ptt.server
   dns-client-mirage))

(library
 (name nec)
 (public_name ptt.nec)
 (modules nec)
 (libraries mirage-time mirage-clock mirage-random ptt ptt.map ptt.server
   dkim-mirage dns-client-mirage))

(library
 (name hm)
 (public_name ptt.hm)
 (modules hm)
 (libraries mirage-time mirage-clock mirage-random ptt ptt.map ptt.server
   uspf-mirage))

(library
 (name elit)
 (public_name ptt.elit)
 (modules elit)
 (libraries mirage-time mirage-clock mirage-random ptt ptt.map ptt.server
   dns-client-mirage uspf-mirage))

(library
 (name ptt_value)
 (public_name ptt.value)
 (modules ptt_value)
 (libraries mirage-kv ptt data-encoding))

(library
 (name spartacus)
 (public_name ptt.spartacus)
 (modules spartacus)
 (libraries mirage-time mirage-clock mirage-random ptt ptt.map ptt.server
   spamtacus-mirage dns-client-mirage))
